manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: YOUR_NAME-deployment
  labels:
    app: YOUR_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: YOUR_NAME
  template:
    metadata:
      labels:
        app: YOUR_NAME
    spec:
      containers:
        - name: YOUR_NAME-deployment
          image: YOUR_IMAGE
          ports:
            - containerPort: 8080
