manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: YOUR_NAME-service
spec:
  selector:
    app: YOUR_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
